# financial-data-pipeline

financial-data-pipeline/: Dockerfile  Makefile  README_QUICKSTART.md  docker-compose.yml  pyproject.toml
financial-data-pipeline/sql/: 001_init.sql
financial-data-pipeline/src/common/: logger.py
financial-data-pipeline/tests/: test_smoke.py
financial-data-pipeline/tools/: run_pipeline_cli.py
